# dsntk

./: CHANGELOG.md  Cargo.toml  Taskfile.yml  docker.sh  markdown-decision-tables-guide.md  publish.sh
.github/workflows/: build-linux-gnu.yml  build-linux-musl.yml  build-macos-aarch64.yml  build-macos.yml  build-windows.yml
bbt/: README.md
bbt/tests/cli/noargs/0001_OK/: expected
bbt/tests/cli/noargs/0002_OK/: expected
bbt/tests/cli/srv/verbose-color/: expected
bbt/tests/server/action_help/: expected
bbt/tests/server/action_none/: expected
common/: Cargo.toml  README.md
common/docs/: README.md
common/src/: errors.rs  lib.rs  uri.rs
common/tests/: test_errors.rs
dsntk/: Cargo.toml  README.md
dsntk/docs/: README.md
dsntk/src/: actions.rs  lib.rs  main.rs
evaluator/: Cargo.toml  README.md
evaluator/docs/: README.md
evaluator/src/: lib.rs  test_files.rs
examples/: Cargo.toml  README.md
examples/docs/: README.md
examples/src/: lib.rs
examples/src/compatibility/level_3/: 3_0072.dmn  3_0103.dmn
examples/src/tests/: mod.rs
feel/: Cargo.toml  README.md
feel-evaluator/: Cargo.toml  README.md
feel-evaluator/benches/: addition.rs  bif_abs.rs  bif_range.rs  subtraction.rs
feel-evaluator/docs/: README.md
feel-evaluator/src/: builders.rs  evaluator_java.rs  filters.rs  iterations.rs  lib.rs
feel-evaluator/src/bifs/: core.rs  named.rs  positional.rs
feel-evaluator/src/tests/: comparison_in.rs  formal_parameters.rs  function_definition.rs  function_invocation.rs  instance_of.rs  iterations.rs  properties.rs  range.rs  satisfies.rs  types.rs
feel-evaluator/src/tests/bifs/: bif_range.rs
feel-evaluator/tests/: evaluators.rs
feel-grammar/: Cargo.toml  DMN-1.3.md  DMN-1.4.md  DMN-1.5.md  README.md
feel-grammar/docs/: README.md
feel-grammar/src/: extractor.rs  feel.y  generator.rs  lib.rs
feel-number/: Cargo.toml  README.md
feel-number/docs/: README.md
feel-number/src/: dfp_number.rs  lib.rs
feel-parser/: Cargo.toml  README.md
feel-parser/benches/: addition.rs  context.rs  division.rs  filter.rs  function_definition.rs  quantified_expression.rs
feel-parser/docs/: README.md
feel-parser/src/: ast.rs  lalr.rs  lexer.rs  lib.rs  parser.rs  scope.rs
feel-parser/src/tests/: ast.rs  closure.rs  mod.rs
feel-parser/src/tests/expr/: boxed_expression.rs  comparison_in.rs  literal.rs  literal_range.rs  mod.rs  properties.rs  range.rs  unary_tests.rs
feel-parser/tests/: boxed_expression.rs  context.rs  expression.rs  simple_expression.rs  simple_expressions.rs  simple_range_literal.rs  simple_value.rs  unary_tests.rs
feel-regex/: Cargo.toml  README.md
feel-regex/docs/: README.md
feel-regex/src/: lib.rs
feel-temporal/: Cargo.toml  README.md
feel-temporal/docs/: README.md
feel-temporal/src/: defs.rs  feel_date.rs  feel_date_time.rs  feel_dt_duration.rs  feel_time.rs  feel_ym_duration.rs  feel_zone.rs  lib.rs
feel/benches/: name_equal.rs
feel/docs/: README.md
feel/src/: bif.rs  bip.rs  context.rs  dto.rs  lib.rs  names.rs  ranges.rs  scope.rs  types.rs  values.rs
feel/src/tests/: bif.rs  context.rs  function.rs  mod.rs  names.rs  qualified_names.rs  scope.rs  types.rs  values.rs
gendoc/: Cargo.toml  README.md
gendoc/docs/: README.md
gendoc/src/: ascii_model.rs  generator.rs  horizontal_decision_table.rs  lib.rs
guide/: config.mdx
guide/pages/guide/: installation.md
macros/: Cargo.toml  README.md
macros/docs/: README.md
macros/src/: business_context_element.rs  dmn_element.rs  expression.rs  lib.rs  named_element.rs  utils.rs
model/: Cargo.toml  README.md
model-evaluator/: Cargo.toml  README.md
model-evaluator/benches/compatibility/: mod.rs
model-evaluator/docs/: README.md
model-evaluator/src/: boxed_expressions.rs  decision.rs  decision_service.rs  decision_table.rs  input_data.rs  input_data_context.rs  item_definition.rs  item_definition_type.rs  lib.rs  model_evaluator.rs  variable.rs
model-evaluator/src/tests/: mod.rs
model-evaluator/src/tests/compatibility/level_3/: dmn_3_0072.rs
model-evaluator/src/tests/various/: progressive_tax.rs
model/docs/: README.md
model/src/: lib.rs  model.rs  parser.rs  xml_utils.rs
model/src/validators/: schema_validator.rs
recognizer/: Cargo.toml  README.md
recognizer/docs/: README.md
recognizer/src/: canvas.rs  lib.rs  markdown.rs  plane.rs  recognizer.rs
recognizer/src/tests/: mod.rs  rect.rs  test_point.rs  test_recognizer.rs
recognizer/tests/markdown_decision_tables/: minimal_decision_tables.rs  miscellaneous_decision_tables.rs
recognizer/tests/unicode_decision_tables/: invalid_hit_policy.rs
recognizer/tests/valid_decision_tables/: mod.rs
recognizer/tests/valid_decision_tables/horizontal/: h_000010.rs
server/: Cargo.toml  README.md
server/docs/: README.md
server/src/: lib.rs  project_handlers.rs  server.rs  utils.rs
server/src/tck/: handlers.rs
type-registry/src/tests/fixtures/commercial_lending/: scenarios.json
type-registry/src/tests/fixtures/commercial_lending/decisions/: collateral_adequacy.md  conditions_of_approval.md  dscr_calculation.md  final_approval.md  ltv_calculation.md  pricing_tier.md  sector_risk_assessment.md
viewer/src/lib/: types.ts
viewer/src/lib/components/: DagCanvas.svelte  InputPanel.svelte  ProjectBkmNode.svelte  StepControls.svelte
viewer/src/routes/: +page.svelte
workspace/: Cargo.toml  README.md
workspace/docs/: README.md
workspace/src/: builder.rs  lib.rs  workspaces.rs
(+2 files in other folders)
