[workspace]

resolver = "2"

members = [
    "common",
    "dsntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-regex",
    "feel-temporal",
    "gendoc",
    "macros",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.3.0-dev"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DecisionToolkit/dsntk.git"
homepage = "https://decision-toolkit.org"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
actix-web = "4.13.0"
antex = "0.2.1"
base64 = "0.22.1"
chrono = "0.4.44"
chrono-tz = "0.10.4"
convert_case = "0.11.0"
clap = { version = "4.6.1", features = ["cargo"] }
dfp-number-sys = "0.2.14"
difference = "2.0.0"
domrs = "0.0.16"
markdown = "1.0.0"
petgraph = "0.8.3"
proc-macro2 = "1.0.106"
quote = "1.0.45"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["fold", "full"] }
uuid = { version = "1.23.1", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dsntk-common = { path = "common" }
dsntk-evaluator = { path = "evaluator" }
dsntk-examples = { path = "examples" }
dsntk-feel = { path = "feel" }
dsntk-feel-evaluator = { path = "feel-evaluator" }
dsntk-feel-grammar = { path = "feel-grammar" }
dsntk-feel-number = { path = "feel-number" }
dsntk-feel-parser = { path = "feel-parser" }
dsntk-feel-regex = { path = "feel-regex" }
dsntk-feel-temporal = { path = "feel-temporal" }
dsntk-gendoc = { path = "gendoc" }
dsntk-macros = { path = "macros" }
dsntk-model = { path = "model" }
dsntk-model-evaluator = { path = "model-evaluator" }
dsntk-recognizer = { path = "recognizer" }
dsntk-server = { path = "server" }
dsntk-workspace = { path = "workspace" }
