[workspace]

resolver = "2"

members = [
    "common",
    "dsntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-regex",
    "feel-temporal",
    "gendoc",
    "macros",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.3.0-rc.0"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DecisionToolkit/dsntk.git"
homepage = "https://decision-toolkit.org"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
actix-web = "4.13.0"
antex = "0.2.1"
base64 = "0.22.1"
chrono = "0.4.44"
chrono-tz = "0.10.4"
convert_case = "0.11.0"
clap = { version = "4.6.1", features = ["cargo"] }
dfp-number-sys = "0.2.14"
difference = "2.0.0"
domrs = "0.0.16"
markdown = "1.0.0"
petgraph = "0.8.3"
proc-macro2 = "1.0.106"
quote = "1.0.45"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["blocking", "json", "rustls"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["fold", "full"] }
uuid = { version = "1.23.1", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dsntk = { version = "0.3.0-rc.0" }
dsntk-common = { version = "0.3.0-rc.0" }
dsntk-evaluator = { version = "0.3.0-rc.0" }
dsntk-examples = { version = "0.3.0-rc.0" }
dsntk-feel = { version = "0.3.0-rc.0" }
dsntk-feel-evaluator = { version = "0.3.0-rc.0" }
dsntk-feel-grammar = { version = "0.3.0-rc.0" }
dsntk-feel-number = { version = "0.3.0-rc.0" }
dsntk-feel-parser = { version = "0.3.0-rc.0" }
dsntk-feel-regex = { version = "0.3.0-rc.0" }
dsntk-feel-temporal = { version = "0.3.0-rc.0" }
dsntk-gendoc = { version = "0.3.0-rc.0" }
dsntk-macros = { version = "0.3.0-rc.0" }
dsntk-model = { version = "0.3.0-rc.0" }
dsntk-model-evaluator = { version = "0.3.0-rc.0" }
dsntk-recognizer = { version = "0.3.0-rc.0" }
dsntk-server = { version = "0.3.0-rc.0" }
dsntk-workspace = { version = "0.3.0-rc.0" }
