[package]
name = "dsntk-evaluator"
version = { workspace = true }
authors = { workspace = true }
description = "ÐecisionToolkit | DMN models, decision tables and FEEL expressions evaluator"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "evaluator"]
documentation = "https://docs.rs/dsntk-evaluator"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-feel-evaluator = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-macros = { workspace = true }
dsntk-model-evaluator = { workspace = true }
