[package]
name = "dsntk-examples"
version = { workspace = true }
authors = { workspace = true }
description = "ÐecisionToolkit | Examples"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "examples"]
documentation = "https://docs.rs/dsntk-examples"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
walkdir = { workspace = true }
